[project]
name = "mcl-lang"
version = "0.1.0"
description = "MCP Coordination Language — a declarative orchestration layer for AI agents"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"

dependencies = [
    "pydantic",
    "pyyaml"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
